# T1-Metodos-e-Modelos

./: .dockerignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: test_gherkin.yaml
.gitlab/merge_request_templates/: default.md
app/: config.py  main.py
app/api/mappers/: veiculos_mapper.py
app/api/models/: pdf.py  veiculo.py
app/api/models/dto/: veiculo_csv.py
app/api/repositories/: pdf_repository.py
app/api/routers/: pdf_router.py
app/api/services/: pdf_service.py
app/database/: mongo.py
app/pdf/: exceptions.py
app/pdf/chevrolet/: ChevroletPDFReader.py
app/pdf/jeep/: JeepPDFReader.py
app/test/: test_pdfs.py
app/test/features/: create_pdf.feature  delete_pdf.feature  get_all_pdfs.feature  get_pdf_by_name.feature  getall_pdfs.feature  update_pdf_by_name.feature  update_pdf_status.feature  update_veiculo_by_sigla.feature  upload_chevrolet_pdf.feature  upload_jeep_pdf.feature
app/test/features/steps/: create_pdf.py  delete_pdf.py  get_all_pdfs.py  get_pdf_by_name.py  getall_pdfs.py  update_pdf_by_name.py  update_pdf_status.py  update_veiculo_by_sigla.py  upload_chevrolet_pdf.py  upload_jeep_pdf.py
app/test/mockers/: pdf_mocker.py  veiculo_mocker.py
app/utils/: utils.py
certs/: README.md
