[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for the Veúculos Via Montadora project."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
fastapi = "0.95.0"
uvicorn = "0.21.1"
mangum = "0.17.0"
pydantic = "1.10.7"
pymongo = "4.3.3"
tabula-py = "2.7.0"
httpx = "0.23.3"
python-multipart = "0.0.6"
fuzzywuzzy = "0.18.0"
pdfplumber = "0.9.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.2"
pytest = "7.2.2"
mongomock = "4.1.2"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
